@@ -227,8 +227,14 @@
 							</config>
 						</TCEforms>
 				      </spamprotectionmode>
-
-
+					<showAgeInsteadOfBirthdate>
+							<TCEforms>
+									<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.showAgeInsteadOfBirthdate</label>
+									<config>
+											<type>check</type>
+									</config>
+							</TCEforms>
+					</showAgeInsteadOfBirthdate>
 				</el>
 			</ROOT>
 		</s_detailview>
