@@ -15,6 +15,7 @@
 			<label index="label_function">Function:</label>
 			<label index="label_date_incompany">In company since:</label>
 			<label index="label_date_birthdate">Birthdate:</label>
+			<label index="label_date_age">Age:</label>
 			<label index="label_first_name">First name:</label>
 			<label index="label_last_name">Last name:</label>
 			<label index="label_officehours">Office hours:</label>
@@ -27,6 +28,7 @@
 			<label index="label_link_detail">Details</label>
 			<label index="label_link_back">back</label>
 			<label index="header_contactperson">Your contact person:</label>
+			<label index="years">years</label>
 			<label index="error_noListType">No list type selected in the configuration of this plugin.</label>
 			<label index="error_contactPersonNotTranslated">The contact person could not be shown (not translated yet)</label>
 			<label index="error_personDetailsNotFetched">The details could not be fetched from the database.</label>
@@ -43,6 +45,7 @@
 			<label index="label_function">Funktion:</label>
 			<label index="label_date_incompany">In der Firma seit:</label>
 			<label index="label_date_birthdate">Geburtsdatum:</label>
+			<label index="label_date_age">Alter:</label>
 			<label index="label_first_name">Vorname:</label>
 			<label index="label_last_name">Nachname:</label>
 			<label index="label_officehours">Bürozeiten:</label>
@@ -55,6 +58,7 @@
 			<label index="label_link_detail">Details</label>
 			<label index="label_link_back">zurück</label>
 			<label index="header_contactperson">Ihre Ansprechperson:</label>
+			<label index="years">Jahre</label>
 			<label index="error_noListType">Kein Modul ausgewählt in der Konfiguration dieses Plugins.</label>
 			<label index="error_contactPersonNotTranslated">Die Kontaktperson kann nicht angezeigt werden (noch nicht übersetzt).</label>
 			<label index="error_personDetailsNotFetched">Die Details konnten nicht von der Datenbank gelesen werden.</label>
@@ -93,6 +97,8 @@
 			<label index="label_groups_plural" type="integer">237903185</label>
 			<label index="label_date_incompany" type="integer">42148933</label>
 			<label index="label_date_birthdate" type="integer">75780351</label>
+			<label index="label_date_age" type="integer">38941977</label>
+			<label index="years" type="integer">123399064</label>
 		</languageKey>
 	</orig_hash>
 	<orig_text type="array">
@@ -123,6 +129,8 @@
 			<label index="label_groups_plural">Teams:</label>
 			<label index="label_date_incompany">In company since:</label>
 			<label index="label_date_birthdate">Birthdate:</label>
+			<label index="label_date_age">Age:</label>
+			<label index="years">years</label>
 		</languageKey>
 	</orig_text>
 </T3locallang>
